@@ -1,7 +1,7 @@
 <!--
- XINS Type DTD. This DTD should be added to the authors.xml file by adding the 
+ XINS Type DTD. This DTD should be added to the authors.xml file by adding the
  following lines at the top of the file :
-<!DOCTYPE authors PUBLIC "-//XINS//DTD Authors 1.0//EN" "http://xins.sourceforge.net/dtd/authors_1_0.dtd">
+<!DOCTYPE authors PUBLIC "-//XINS//DTD Authors 1.0//EN" "http://www.xins.org/dtd/authors_1_0.dtd">
 -->
 <!ELEMENT authors (author*)>
 <!ELEMENT author EMPTY>
