@@ -1,7 +1,7 @@
 <!--
  XINS Environments DTD. This DTD should be added to the environments.xml file
  of the project by adding the following line at the top of the file :
-<!DOCTYPE environments PUBLIC "-//XINS//DTD Environments 1.0//EN" "http://xins.sourceforge.net/dtd/environments_1_0.dtd">
+<!DOCTYPE environments PUBLIC "-//XINS//DTD Environments 1.0//EN" "http://www.xins.org/dtd/environments_1_0.dtd">
 -->
 <!ELEMENT environments (environment*)>
 <!ELEMENT environment EMPTY>
