@@ -1,7 +1,7 @@
 <!--
  XINS logdoc DTD. This DTD should be added to all log.xml file
  by adding the following lines at the top of the file :
-<!DOCTYPE log PUBLIC "-//XINS//DTD XINS Logdoc 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/log_1_0_alpha.dtd">
+<!DOCTYPE log PUBLIC "-//XINS//DTD XINS Logdoc 1.0 alpha//EN" "http://www.xins.org/dtd/log_1_0_alpha.dtd">
 -->
 <!ELEMENT log (translation-bundle*, group*)>
 <!ATTLIST log
