@@ -1,7 +1,7 @@
 <!--
  XINS translation bundle DTD. This DTD should be added to all translation-bundle-xx-XX.xml file
  by adding the following lines at the top of the file :
-<!DOCTYPE translation-bundle PUBLIC "-//XINS//DTD XINS Translation Bundle 1.0//EN" "http://xins.sourceforge.net/dtd/translation-bundle_1_0.dtd">
+<!DOCTYPE translation-bundle PUBLIC "-//XINS//DTD XINS Translation Bundle 1.0//EN" "http://www.xins.org/dtd/translation-bundle_1_0.dtd">
 -->
 <!ELEMENT translation-bundle (translation*)>
 <!ELEMENT translation (#PCDATA|value-of-param)*>
