@@ -1,7 +1,7 @@
 <!--
  XINS Type DTD. This DTD should be added to all type files added to your
  project by adding the following lines at the top of the .typ file :
-<!DOCTYPE type PUBLIC "-//XINS//DTD Type 1.0//EN" "http://xins.sourceforge.net/dtd/type_1_0.dtd">
+<!DOCTYPE type PUBLIC "-//XINS//DTD Type 1.0//EN" "http://www.xins.org/dtd/type_1_0.dtd">
 -->
 <!ELEMENT type (description, (pattern | enum | properties | int8 | int16 | int32 | int64 | set | list)?)>
 <!ATTLIST type
