@@ -1,7 +1,7 @@
 <!--
  XINS project DTD. This DTD should be added to all xins-project.xml file
  by adding the following lines at the top of the file :
-<!DOCTYPE project PUBLIC "-//XINS//DTD XINS Project 1.0 alpha//EN" "http://xins.sourceforge.net/dtd/xins-project_1_0_alpha.dtd">
+<!DOCTYPE project PUBLIC "-//XINS//DTD XINS Project 1.0 alpha//EN" "http://www.xins.org/dtd/xins-project_1_0_alpha.dtd">
 -->
 <!ELEMENT project (specdocs?, cvsweb?, patterntest?, java-impls?, java-clients?, java-types?, api*)>
 <!ATTLIST project
