@@ -787,7 +787,7 @@
 								<packageset dir="build/java-types/{$api}" />
 							</xsl:if>
 							<link
-							href="http://xins.sourceforge.net/javadoc/${{version.major}}.${{version.minor}}/"
+							href="http://www.xins.org/javadoc/${{version.major}}.${{version.minor}}/"
 							offline="true"
 							packagelistloc="{$xins_home}/docs/javadoc/" />
 							<link
@@ -971,7 +971,7 @@
 							<packageset dir="build/java-types/{$api}" />
 						</xsl:if>
 						<link
-						href="http://xins.sourceforge.net/javadoc/{$xins_version}/"
+						href="http://www.xins.org/javadoc/{$xins_version}/"
 						offline="true"
 						packagelistloc="{$xins_home}/docs/javadoc/" />
 						<link
